--- a/JS/58_DOM简介.html
+++ b/JS/58_DOM简介.html
@@ -5,13 +5,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+</head>
+<body>
+  <button id="btn">我是一个按钮</button>
   <script type="text/javascript">
     /**
      * DOM全称Document Object Model
+     * 文档
+     *  - 文档表示的就是整个HTML网页文档
+     * 对象
+     *  - 对象表示将网页中的每一个部分都转换为了一个对象
+     * 模型
+     *  - 使用模型来表示对象之间的关系，方便获取对象
+     * 
+     * 节点：
+     * Node是构成网页的最基本组成部分，网页中的每个部分都可以称为是一个节点
+     * 如：html标签、属性、文本、注释、整个文档都是一个节点。虽然都是节点，但是具体类型是不同的，
+     * 比如标签我们称为元素节点、属性称为属性节点，文本称为文本节点、文档称为文档节点。
+     * 节点的类型不同，属性和方法也都不尽相同。
+     * 常用节点分为四类：
+     *                                   nodeName   nodeType  nodeValue
+     *  - 文档节点：整个Html文档          #document      9        null
+     *  - 元素节点：Html文档中的Html标签    标签名        1        null
+     *  - 属性节点：元素的属性              属性名        2       属性值
+     *  - 文本节点：Html标签中的文本内容     #text        3       文本内容
+     * 
     */
+    /**
+     * 浏览器已经为我们提供文档节点对象，这个对象是window属性
+     * 可以在页面中直接使用，文档节点代表的是整个网页
+    */
+    console.log(document);
+    var btn = document.getElementById("btn");
+    btn.innerHTML = "a button";
   </script>
-</head>
-<body>
-  
 </body>
 </html>
